<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@drawable/rectangle_smallwhite"
        android:elevation="@dimen/_5sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:text="@string/str_update_profile_message"
            android:textSize="@dimen/_11sdp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvUpdateProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/rectangle_btn"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_20sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/str_update_profile" />

        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="@string/str_help"
                android:textSize="@dimen/_9sdp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvWhatsapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/str_support_whatsapp"
                android:textSize="@dimen/_9sdp" />


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>