<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".activity.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/signuplogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_100sdp"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                android:text="@string/str_welcome_back"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/ivLogo" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/str_sign_continue"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <LinearLayout
                android:id="@+id/llTop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_220sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/rectangle_yellow"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/tvSubTitle">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center"
                    android:text="I am a Student"
                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/edtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rectangle_edit"
                    android:drawableStart="@drawable/baseline_phone_24"
                    android:drawablePadding="@dimen/_5sdp"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/str_phone_number"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:padding="@dimen/_12sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/darkyellow"
                    android:textSize="@dimen/_10sdp" />


                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rectangle_edit"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="@dimen/_5sdp"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/str_password"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:padding="@dimen/_12sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/darkyellow"
                    android:textSize="@dimen/_10sdp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/str_forgot_password"
                    android:textColor="@color/darkyellow" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rectangle_btn"
                    android:fontFamily="@font/inter_bold"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/str_submit" />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvNewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                android:text="@string/str_create_new_account"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llTop" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:text="@string/str_dont_details"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNewAccount" />


            <ProgressBar
                android:id="@+id/pbLoadData"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:theme="@style/CircularProgress"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
