<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".activity.SignUpEmailActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/signuplogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_100sdp"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                android:text="@string/dont_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivLogo" />


            <LinearLayout
                android:id="@+id/llTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/rectangle_yellow"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center"
                    android:text="I am a Student"
                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/edtEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rectangle_edit"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/_5sdp"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/str_email_address"
                    android:inputType="textEmailAddress"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:padding="@dimen/_12sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/darkyellow"
                    android:textSize="@dimen/_10sdp" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rectangle_btn"
                    android:fontFamily="@font/inter_bold"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/str_submit" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/llTop">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/str_already_have_an_account"
                    android:textColor="@color/black" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/str_login"
                    android:textColor="@color/black"
                    app:fontFamily="@font/inter_bold" />


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
