<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".activity.ForgotPasswordActivity">

        <RelativeLayout
            android:id="@+id/rrMain"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/yellow"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:paddingStart="@dimen/_5sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_keyboard_backspace_24" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/str_forgot_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />


        </RelativeLayout>

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/rectangle_edit"
            android:drawableStart="@drawable/baseline_phone_24"
            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/str_phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="@dimen/_12sdp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/darkyellow"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/rrMain" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/rectangle_btn"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/str_submit"
            app:layout_constraintTop_toBottomOf="@id/edtPhoneNumber" />


        <ProgressBar
            android:id="@+id/pbLoadData"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:theme="@style/CircularProgress"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
